group logic in createComputationManager for shortTime and longTime computationManager
Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>